2019-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Change three URL references to https
	* man/hmac.Rd: Ditto

2019-09-20  Matthew de Queljoe <matthew.dequeljoe@gmail.com>

	* R/digest.R: refactor digest function
	* R/vdigest.R: remove helper functions from file
	* R/utils.R: new file to hold helper functions

2019-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.21

2019-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (Author): Add Matthew
	* README.md (Author): Ditto

	* demo/vectorised.R: Add demo (based on Matthew's PR)

	* R/vdigest.R: Added a handful of #nocov tags
	* man/vdigest.Rd: Break up two long lines

2019-09-17  Matthew de Queljoe <matthew.dequeljoe@gmail.com>

	* src/digest.c: Add vectorised digest function
	* R/vdigest.R: Add vectorised digest function factory
	* man/vdigest.Rd: Add documentation
	* NAMESPACE: Export new function getVDigest
	* inst/tinytest/test_digest.R: Add tests

2019-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.20

2019-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add installation and continues testing sections

	* .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_num2hex.R: Quieter with sapply

        * test/tinytest/test_aes.R: renamed from testAES.R
        * test/tinytest/test_crc32.R: renamed from testCRC32.R
        * test/tinytest/test_digest.R: renamed from testDigest.R
        * test/tinytest/test_digest2int.R: from testDigest2Int.R
        * test/tinytest/test_hmac.R: renamed from testHMAC.R
        * test/tinytest/test_num2hex.R: renamed from testNum2Hex.R
        * test/tinytest/test_raw.R: renamed from testRaw.R